# cmake-quickstart

./: CMakeLists.txt  README.md  hello_test.cc  main.cpp  max_value.cc  max_value.h  max_value_test.cc
